4.2/baf2a0e1c92255c1c0ee6d0468b247499f6f6f8b
ASoC: rt5645: fixed kbuild err

kbuild robot reports following error/warnings

   sound/soc/codecs/rt5645.c: In function 'rt5645_i2c_probe':
>> sound/soc/codecs/rt5645.c:2720:4: error: implicit declaration of
>> function 'devm_gpiod_get_index'
>> [-Werror=implicit-function-declaration]
       gpiod = devm_gpiod_get_index(&i2c->dev, "rt5645", 0);
       ^
>> sound/soc/codecs/rt5645.c:2720:10: warning: assignment makes pointer
>> from integer without a cast
       gpiod = devm_gpiod_get_index(&i2c->dev, "rt5645", 0);
             ^
>> sound/soc/codecs/rt5645.c:2722:4: error: implicit declaration of
>> function 'gpiod_direction_input'
>> [-Werror=implicit-function-declaration]
       if (IS_ERR(gpiod) || gpiod_direction_input(gpiod)) {
       ^
>> sound/soc/codecs/rt5645.c:2726:5: error: implicit declaration of
>> function 'desc_to_gpio' [-Werror=implicit-function-declaration]
        rt5645->pdata.hp_det_gpio = desc_to_gpio(gpiod);
        ^
>> sound/soc/codecs/rt5645.c:2728:7: error: implicit declaration of
>> function 'gpiod_is_active_low'
>> [-Werror=implicit-function-declaration]
          = !gpiod_is_active_low(gpiod);
          ^
   cc1: some warnings being treated as errors

Signed-off-by: Fang, Yang A <yang.a.fang@intel.com>
Signed-off-by: Mark Brown <broonie@kernel.org>

